Fix comments from Kris