@@ -2,14 +2,15 @@ package org.cloudfoundry.multiapps.controller.database.migration.executor.type;
 
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
-import java.util.Arrays;
 import java.util.List;
 
 public class BytesDatabaseTypeSetter implements DatabaseTypeSetter {
 
+    private static final String BYTEA = "bytea";
+
     @Override
     public List<String> getSupportedTypes() {
-        return Arrays.asList("bytea");
+        return List.of(BYTEA);
     }
 
     @Override
